--- a/contactUs.html
+++ b/contactUs.html
@@ -17,7 +17,7 @@
             <input type="email" name="Email" placeholder="Email" required>
             <input type="tel" name="tel" placeholder="Contact Number" required>
             <textarea name="Message" placeholder="Message" required>Message</textarea>
-            <button type="submit">Submit</button>
+            <a href="index.html"><button type="submit">Submit</button></a>
         </form>
         
     </div>
