--- a/contactUs.html
+++ b/contactUs.html
@@ -16,7 +16,7 @@
             <input type="text" name="Name" placeholder="Full Name" required> 
             <input type="email" name="Email" placeholder="Email" required>
             <input type="tel" name="tel" placeholder="Contact Number" required>
-            <textarea name="Message" placeholder="Message" required>Message</textarea>
+            <textarea name="Message" placeholder="Message" required></textarea>
             <button type="submit">Submit</button>
         </form>
         
