--- a/contactUs.html
+++ b/contactUs.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="container">
-        <h1>Share your Details</h1>
+        <h1>Reach Out to get Owner Details</h1>
         <form action="https://formspree.io/f/mzblqybo" method="POST" />
             <input type="text" name="Name" placeholder="Full Name" required> 
             <input type="email" name="Email" placeholder="Email" required>
