--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </ul>
             </div>
         </header>
-        <h1 class="heading"> Find your desired Flats,<br> With 0 Brokerage!</h1>
+        <h1 class="heading"> Find your desired Flats,<br> With 0% Brokerage!</h1>
 
         <select name="Location" id="selectLocation" onchange="window.location.href=this.value">
             <option value="" selected>Select a Location</option>
