--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <h1 class="heading"> Find your desired Flats,<br> With 0% Brokerage!</h1>
 
         <select name="Location" id="selectLocation" onchange="window.location.href=this.value">
-            <option value="" selected>Select a Location</option>
+            <option value="" default disabled selected>Select a Location</option>
             <option value="EkOnkarCity.html">EkOnkarCity</option>
             <option value="DarpanGreens.html">Darpan Greens</option>
             <option value="ModernValley.html">Modern Valley</option>
