--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     
         <div class="PostProperty">
             <div class="statement">Are you a Property Owner!</div>
-            <a href="contact.html"><button id="PropertyPost">Contact Us</button></a>
+            <a href="#"><button id="PropertyPost">Contact Us</button></a>
         </div>
 
 <!--    </div>-->
